force-app/main/default/objects/Online_Claim_Error_Log__c/Online_Claim_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Online Claim Error Log</label>
    <nameField>
        <displayFormat>OCEL-{000000}</displayFormat>
        <label>Online Claim Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Claim Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>