force-app/main/default/objects/Online_Claim_Error_Log__c/fields/Error_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Error_Stack_Trace__c</fullName>
    <label>Error Stack trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>