force-app/main/default/objects/Online_Claim_Error_Log__c/fields/Line_number__c.field-meta.xml
<CustomField>
    <fullName>Line_number__c</fullName>
    <label>Line number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>